kubernetes-deployment/app-deployment/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: leave-app-service
  namespace: tan-app
spec:
  selector:
    app: leave-app
  ports:
    - port: 1234
      targetPort: 1234
      name: standard
